# risenow-dspy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  _tmp_check.py  architecture_diagrams.md  cli.py  example_pestle.py  main.py  pyproject.toml  refactor_plan.md  simple_discovery.py  test_pestle_agent.py  test_porters_agent.py  test_vendor_agent.py
.claude/: settings.local.json
agents/: __init__.py  pestle_agent.py  porters_agent.py  rfp_agent.py  swot_agent.py  vendor_agent.py  vendor_contact_agent.py
config/: __init__.py  environment.py  lm.py  observability.py
data/: __init__.py  examples.py  rfp_examples.py
data/artifacts/: vendor_bootstrap.json  vendor_bootstrap.jsonl
metrics/: __init__.py  pestle_scoring.py  porters_scoring.py  rfp_scoring.py  scoring.py  swot_scoring.py
models/: __init__.py  citation.py  pestle.py  porters.py  report.py  rfp.py  swot.py  vendor.py
optimize/: __init__.py  bootstrap_pestle.py  bootstrap_swot.py  bootstrap_vendor.py
outputs/: porters_analysis_20250919_114749.md
pipeline_outputs/20250924_164030/: 01_vendor_discovery.md  02_pestle_analysis.md
pipeline_outputs/20250924_165119/: 01_vendor_discovery.md  02_pestle_analysis.md  03_porters_analysis.md  04_swot_analyses.md  05_rfp_questions.md  (+4 more)
scripts/: _old_pipeline_step_tester.py  pipeline.py  pipeline_step_tester.py
tests/: conftest.py  test_rfp_agent.py  test_vendor_agent.py  test_vendor_contact_agent.py
tools/: __init__.py  markdown_tools.py  web_tools.py
utils/: __init__.py  async_dspy.py  citation_matcher.py  markdown_writer.py  source_logger.py
(+38 files in other folders)
